crates/brokkr-cli/src/tui/snapshots/participant_checkpoints_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌seat──────────────────────────────────────────────────────────────────────────┐"
"│intake · succeeded                                                            │"
"│terminal  effect/succeeded · 2026-01-01T00:02:03Z                             │"
"│transcript  claude-session · abcd-1234 · home /home/operator/.claude/projects │"
"│selected by  —                                                                │"
"│model     — (claimed) · boundary —                                            │"
"│effort    pinned — · applied — (configuration)                                │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌checkpoints───────────────────────────────────────────────────────────────────┐"
"│3  Read  model —  boundary —  effort —  tokens —  docs/decisions/0014-interact│"
"│—  claude-session-finished  model —  boundary —  effort —  tokens —  —  2026-0│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌transcript────────────────────────────────────────────────────────────────────┐"
"│no local session transcript on this machine — the transcript line above names │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs · run run-7 · seat eff-i · scoped eff-i                                    "
"↑↓/jk scroll · g/G top/bottom · Tab pane · Esc back · / filter · r refresh · ? h"
