crates/brokkr-cli/src/tui/snapshots/participant_transcript_reader_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌row · Esc closes──────────────────────────────────────────────────────────────┐"
"│#1 turn 0  2026-01-01T00:00:05Z                                               │"
"│                                                                              │"
"│prose of turn 0                                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
